[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/logo/logo.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/backgrounds/grassy_plains_by_theodenn.jpg" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1024, 768 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0.384314, 0.494118, 0.309804, 1 )
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenuCanvas" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="MainMenuCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainMenuCanvas/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 100
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuCanvas/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 360.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 220 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartNewGameButton" type="Button" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 360.0
margin_bottom = 343.0
focus_mode = 0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 2 )
text = "Start New Game"
flat = true

[node name="LoadGameButton" type="Button" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 360.0
margin_bottom = 412.0
focus_mode = 0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 2 )
text = "Load Game"
flat = true

[node name="OptionsButton" type="Button" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 360.0
margin_bottom = 481.0
focus_mode = 0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 2 )
text = "Options"
flat = true

[node name="Exit" type="Button" parent="MainMenuCanvas/Panel/MarginContainer/VBoxContainer"]
margin_top = 485.0
margin_right = 360.0
margin_bottom = 550.0
focus_mode = 0
size_flags_horizontal = 7
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true

[connection signal="button_up" from="MainMenuCanvas/Panel/MarginContainer/VBoxContainer/StartNewGameButton" to="." method="_on_StartNewGameButton_button_up"]
[connection signal="button_up" from="MainMenuCanvas/Panel/MarginContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_button_up"]
[connection signal="button_up" from="MainMenuCanvas/Panel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="MainMenuCanvas/Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_up"]
